#
# Copyright 2021 Scott Brauer
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an  BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
#
#
# @file   CMakeLists.txt
# @author Scott Brauer
# @date   11-11-2019
#

offcenter_cxx()
offcenter_elpp()
offcenter_test_constants(trading_common)

add_executable(${EXE_NAME}
	${CMAKE_CURRENT_LIST_DIR}/src/main.cpp
)

target_link_libraries(${EXE_NAME}
	offcenter_trading_common
	Offcenter::oanda_v20
	GTest::gtest
	cpprestsdk::cpprest
	${EASYLOGGINGPP_LIBRARY}
	Threads::Threads
	OpenSSL::Crypto
)

target_include_directories(${EXE_NAME}
	PUBLIC
		${CMAKE_CURRENT_LIST_DIR}/include

	SYSTEM INTERFACE
		${EASYLOGGINGPP_INCLUDE_DIR}
)

offcenter_test()